installed and used celery as executor

--- a/airflow/airflow.cfg
+++ b/airflow/airflow.cfg
@@ -48,7 +48,7 @@ default_timezone = utc
 #
 # Variable: AIRFLOW__CORE__EXECUTOR
 #
-executor = LocalExecutor
+executor = CeleryExecutor
 
 # The auth manager class that airflow should use. Full import path to the auth manager class.
 #
@@ -2329,3 +2329,10 @@ xcom_objectstorage_compression =
 #
 venv_install_method = auto
 
+[celery]
+
+broker_url = redis://localhost:6379/0
+
+celery_app_name = airflow.providers.celery.executors.celery_executor
+
+result_backend = db+sqlite:////media/ronald/Kingston%%20Shared/limitless/airflow/airflow.db
