--- a/airflow/airflow.cfg
+++ b/airflow/airflow.cfg
@@ -494,7 +494,7 @@ alembic_ini_file_path = alembic.ini
 #
 # Variable: AIRFLOW__DATABASE__SQL_ALCHEMY_CONN
 #
-sql_alchemy_conn = sqlite:////media/ronald/Kingston Shared/limitless/airflow/airflow.db
+sql_alchemy_conn = postgresql://airflow_user:Hellboy666666Hellboy666666@ep-aged-firefly-a1wuok4h-pooler.ap-southeast-1.aws.neon.tech/airflow_db?sslmode=require&channel_binding=require
 
 # Extra engine specific keyword args passed to SQLAlchemy's create_engine, as a JSON-encoded value
 #
@@ -573,7 +573,7 @@ sql_alchemy_pool_pre_ping = True
 #
 # Variable: AIRFLOW__DATABASE__SQL_ALCHEMY_SCHEMA
 #
-sql_alchemy_schema = 
+sql_alchemy_schema = public
 
 # Import path for connect args in SQLAlchemy. Defaults to an empty dict.
 # This is useful when you want to configure db engine args that SQLAlchemy won't parse
@@ -2331,8 +2331,14 @@ venv_install_method = auto
 
 [celery]
 
-broker_url = redis://localhost:6379/0
+broker_url = rediss://default:AYIgAAIjcDE2Y2NjNDM0ZDI2OTA0N2RhYWExYTE2MDAxZDUzOGRjZHAxMA@loving-silkworm-33312.upstash.io:6379?ssl_cert_reqs=CERT_REQUIRED
 
 celery_app_name = airflow.providers.celery.executors.celery_executor
 
-result_backend = db+sqlite:////media/ronald/Kingston%%20Shared/limitless/airflow/airflow.db
+# # Use PostgreSQL for result backend instead of Redis
+# result_backend = db+postgresql://airflow_user:Hellboy666666Hellboy666666@ep-aged-firefly-a1wuok4h-pooler.ap-southeast-1.aws.neon.tech/airflow_db?sslmode=require&channel_binding=require
+
+# use redis for result backend
+result_backend = rediss://default:AYIgAAIjcDE2Y2NjNDM0ZDI2OTA0N2RhYWExYTE2MDAxZDUzOGRjZHAxMA@loving-silkworm-33312.upstash.io:6379?ssl_cert_reqs=CERT_REQUIRED
+
+worker_concurrency = 10
